# FluidFramework

./: .depcheckrc  .depcheckrc.base.cjs  .depcheckrc.cjs  .dockerignore  .editorconfig  .eslintrc.js  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .markdownlint.json  .mcp.json  .mocharc.js  .npmrc  .nxignore  .nycrc.json  .pnpmfile.cjs  .prettierignore  .syncpackrc.yml  .vale.ini  .yarnrc.yaml  .yarnrc.yml  ApplicationModels.md  BENCHMARK-GUIDE.md  BENCHMARK-QUICKSTART.md  BENCHMARK-README.md  BENCHMARK-SUMMARY.txt  BREAKING.md  CHANGELOG.md  CLAUDE.md  CONCEPTS.md  CONTRIBUTING.md  ClientRequirements.md  ClientRequirments.md  CompatibilityCheckpoints.md  CredScanSuppressions.json  CrossClientCompatibility.md  CrossClientCompatibilityDevGuide.md  DEV.md  Dockerfile  (+102 more)
.changeset/: README.md  add-fluid-readonly-array.md  add-historical-load-target.md  add-odsp-create-progid.md  add-originatorless-id-normalization.md  afraid-bags-create.md  afraid-facts-cry.md  afraid-rice-feel.md  afraid-snails-speak.md  all-glasses-grab.md  all-heads-lay.md  all-nails-fetch.md  all-rules-love.md  all-weeks-sin.md  alpha-minimized-transactions.md  angry-clubs-play.md  angry-ligers-judge.md  angry-radios-cross.md  angry-wings-battle.md  app-insights-logger.md  beige-candles-sleep.md  beige-dots-film.md  beige-experts-obey.md  beige-kiwis-hear.md  beige-radios-jog.md  better-apes-fly.md  better-mails-judge.md  better-meals-cough.md  big-insects-nail.md  big-items-stop.md  big-symbols-unite.md  bitter-clocks-sleep.md  blessed-pens-rise.md  bloated-ghosts-expand.md  blob-handle-payload-uploaded-event.md  blood-moon-rising.md  blue-camels-worry.md  blue-eels-invite.md  blue-plants-act.md  blue-rooms-lose.md  (+741 more)
.claude/: CLAUDE.md  settings.json  settings.local.json
.coral/: coralDemands.yaml  scaffolding.yaml
.devcontainer/: .zshrc  Dockerfile  README.md  devcontainer.json  docker-compose.yml  first-run-notice.txt  welcome.sh
.github/: CODEOWNERS  actions-labeler.yml  code_owners.yml  copilot-instructions.md  excluded-links.json  fabricbot.json  labeler-areas.yml  labeler-changesets.yml  labeler.yml  labelmaker.yml  pull.yml  pull_request_template.md  release.yml
.md-magic-templates/: Contribution-Guidelines-Template.md  Help-Template.md  README.md  Trademark-Template.md  readme-simple.md
.serena/: project.yml
.tours/: welcome.tour
RELEASE_NOTES/: 2.0.0-internal.6.4.0.md  2.0.0-internal.7.0.0.md  2.0.0-internal.7.1.0.md  2.0.0-internal.7.2.0.md  2.0.0-internal.7.3.0.md  2.0.0-internal.7.4.0.md  2.0.0-internal.8.0.0.md  2.0.0-rc.1.0.0.md  2.0.0-rc.2.0.0.md  2.0.0-rc.3.0.0.md  2.0.0-rc.4.0.0.md  2.0.0-rc.5.0.0.md  2.0.0.md  2.1.0.md  2.10.0.md  2.100.0.md  2.101.0.md  2.102.0.md  2.103.0.md  2.11.0.md  2.110.0.md  2.111.0.md  2.112.0.md  2.12.0.md  2.13.0.md  2.2.0.md  2.20.0.md  2.21.0.md  2.22.0.md  2.23.0.md  2.3.0.md  2.30.0.md  (+32 more)
samples/experiments/NativeMergeTree/: .gitignore  CMakeLists.txt  FileTable.h  Main.cpp  NativeMergeTree.sln  PartialLengths.h  Seq.h
samples/experiments/NativeMergeTree/Test/: Test.vcxproj.filters
wasm/: .eslintrc.js  .gitignore  Cargo.toml  README.md  init.ps1  package-combo-template.json  package.json  pnpm-lock.yaml  tsconfig.json  wasm-pack-crate.js  wasm-pack-workspace.js
wasm/.cargo/: config
wasm/client-wasm/: Cargo.toml
wasm/fluid-experimental-wasm-add/: Cargo.toml
wasm/fluid-experimental-wasm-add/src/: lib.rs
wasm/fluid-experimental-wasm-subtract/: Cargo.toml
wasm/fluid-experimental-wasm-subtract/src/: lib.rs
wasm/fluid-wasm/: Cargo.toml
wasm/fluid-wasm-add/: Cargo.toml
wasm/fluid-wasm-subtract/: Cargo.toml
wasm/fluid-wasm/src/: lib.rs
wasm/target-web/: .gitignore  package.json
wasm/typescript/arithmetic/: .eslintrc.js  package.json  tsconfig.json
wasm/typescript/arithmetic/src/: import.js  index.ts  multiply.ts
wasm/typescript/arithmetic/src/test/: multiply.spec.ts
wasm/wasm-hello-world/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
wasm/wasm-hello-world/pkg_combo/: package.json
wasm/wasm-hello-world/rust_src/: Cargo.toml
wasm/wasm-hello-world/rust_src/src/: lib.rs
wasm/wasm-hello-world/site/: .gitignore  README.md  package-lock.json  package.json  tsconfig-node.json  tsconfig.json  webpack.config.js
wasm/wasm-hello-world/site/public/: index.html
wasm/wasm-hello-world/site/src/: test.ts
wasm/web-packages/: .gitignore
wasm/web-packages/client-wasm/: package.json
wasm/web-packages/fluid-experimental-wasm-add/: package.json
wasm/web-packages/fluid-experimental-wasm-subtract/: package.json
wasm/web-packages/fluid-wasm/: package.json
(+20260 files in other folders)
