[workspace]
members = ["./fluid-experimental-wasm-add", "./fluid-experimental-wasm-subtract", "./fluid-wasm"]

[metadata]
fluid-wasm-packages = ["./fluid-experimental-wasm-add", "./fluid-experimental-wasm-subtract"]

[profile.release]
debug = true
opt-level = 2
lto = true
codegen-units = 1
panic = 'abort'