[package]
name = "client-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM glue crate to be used in the Fluid client release group"
repository = "https://github.com/microsoft/FluidFramework"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fluid-wasm-add = { path = "../fluid-wasm-add", version = "0.1" }
fluid-wasm-subtract = { path = "../fluid-wasm-subtract", version = "0.1" }
wasm-bindgen = "0.2.84"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = false
dwarf-debug-info = false
