[package]
name = "fluid-wasm-add"
readme = "../README.md"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/microsoft/FluidFramework"
license = "MIT"
categories = ["web-programming", "no-std", "wasm"]
authors = ["Justus Camp <justuscamp@microsoft.com>", "Taylor Williams <taylorsw@microsoft.com>", "Craig Macomber <Craig.Macomber@microsoft.com>"]
description = "A library for adding two numbers in WASM (wow!)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html