[package]
name = "fluid-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fluid-experimental-wasm-add = { path = "../fluid-experimental-wasm-add", version = "0.1" }
fluid-experimental-wasm-subtract = { path = "../fluid-experimental-wasm-subtract", version = "0.1" }
wasm-bindgen = "0.2.84"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = false
dwarf-debug-info = false